<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<package>
  <name>pose_utils</name>
  <version>0.0.0</version>
  <description>pose_utils</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
    <cpp cflags="-I${prefix}/include"
      lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" />
  </export>
</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<package format="3">
  <name>pose_utils</name>
  <version>0.0.0</version>
  <description>pose_utils</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>Armadillo</depend>
</package>
