<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<package>
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>quadrotor_msgs</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <url>http://ros.org/wiki/quadrotor_msgs</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <cpp cflags="-I${prefix}/include"
      lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" />
  </export>

</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<package format="3">
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>quadrotor_msgs</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
