<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<package>
  <version>0.0.0</version>
  <name>rviz_plugins</name>
  <description>
    Additional plugins for RViz
  </description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>roscpp</build_depend>
  <!--build_depend>multi_map_server</build_depend-->
  <build_depend>qtbase5-dev</build_depend>

  <run_depend>rviz</run_depend>
  <!--run_depend>multi_map_server</run_depend-->
  <run_depend>roscpp</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<!-- NOTE: rviz plugins are NOT compatible with ROS2 rviz2.
     This package needs complete rewrite using ros2_rviz or similar.
     See: https://github.com/ros2/rviz/tree/ros2 for porting guide -->
<package format="3">
  <name>rviz_plugins</name>
  <version>0.0.0</version>
  <description>Additional plugins for RViz (NOT COMPATIBLE WITH ROS2)</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ROS2 rviz plugins require different API - package disabled -->
</package>
