<package format="3">
  <name>uav_utils</name>
  <version>0.0.0</version>
  <description>The uav_utils package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
</package>
